✅ Update JUnit test config
- ➖ JUnit Platform gradle plugin
- ⬆️ JUnit (5.8.2)